# victo-rdb

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.c
src/: CMakeLists.txt  service_locator.c  service_locator.h
src/commons/: constants.h  datastructures.h
src/core/base/: db_config.c
src/core/base/includes/: db_config_proto.h
src/core/collection/: collection.c
src/core/collection/includes/: collection_proto.h
src/core/db/: db.c
src/core/db/includes/: db_proto.h
src/core/file/: file_io.c
src/core/file/includes/: file_io_proto.h
src/core/subscription/: subscription.c
src/core/subscription/includes/: subscription_proto.h
src/core/vector/: vector_io.c  vector_math.c
src/core/vector/includes/: vector_io_local_proto.h  vector_io_proto.h  vector_math_proto.h
src/ds/: datastructures.h
src/engine/: CMakeLists.txt
src/engine/collection/: collection.c
src/engine/collection/interface/: collection.h
src/engine/db/: db.c
src/engine/db/interface/: db.h
src/engine/file/: file_io.c
src/engine/file/interface/: file_io.h
src/engine/subscription/: subscription.c
src/engine/subscription/interface/: subscription.h
src/engine/vector/: vector_io.c  vector_math.c
src/engine/vector/interface/: vector_io.h  vector_io_local.h  vector_io_private.h  vector_math_private.h
src/registry/: db_config_sl.c  db_ops_sl.c  user_ops_sl.c
src/registry/includes/: db_config_sl_proto.h  db_ops_sl_proto.h  user_ops_sl_proto.h
src/servers/: CMakeLists.txt
src/servers/auth/: auth.c  crypto.c
src/servers/auth/includes/: auth_proto.h  crypto_proto.h  user_ops_proto.h
src/servers/auth/interface/: auth.h  crypto.h  user_ops.h
src/servers/commons/: adaptor.c  globals.c
src/servers/commons/includes/: adaptor_proto.h  globals_proto.h
src/servers/commons/interface/: adaptor.h  globals.h
src/servers/tcp/: server.c
src/servers/tcp/interface/: server.h
src/servers/websock/: server.c
src/servers/websock/includes/: server_proto.h
src/sl/db/: service_locator.c
src/utils/: CMakeLists.txt
src/utils/ds/: enums.c  hashmap.c
src/utils/files/: file_utils.c
src/utils/json/: ds_stack.c  jn_stack.c  json.c
src/utils/logs/: log.c
src/utils/strings/: string_builder.c
src/utils/time/: timestamp.c
src/utils/uuid/: uuid.c
(+20 files in other folders)
